--- a/store/mcr-012/index.html
+++ b/store/mcr-012/index.html
@@ -7,8 +7,8 @@
     <title>Cassette - Demo.nstration #3 - Hobbyist,</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../assets/images/faviconv2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/images/faviconv2.png" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
@@ -485,8 +485,8 @@
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Mystery Class Hat</p>
-                    <p class="merch-block-product-name">Mystery Class Records</p>
+                    <p class="merch-block-artist-name">Mystery Class Records</p>
+                    <p class="merch-block-product-name">Mystery Class Hat</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$30</div>
