--- a/powdr/index.html
+++ b/powdr/index.html
@@ -7,8 +7,8 @@
     <title>powdr</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../assets/images/faviconv2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/images/faviconv2.png" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
