centered player track text

--- a/donovan-funk/index.html
+++ b/donovan-funk/index.html
@@ -86,7 +86,7 @@
                 <button class="mcr-player__label" type="button">
                   Listen Now
                 </button>
-                <span class="mcr-player__track">Donovan Funk - Window</span>
+                <span class="mcr-player__track">Donovan Funk - Windows</span>
               </div>
 
               <audio class="mcr-player__audio" preload="metadata"></audio>
