first video section added

--- a/cryhard/index.html
+++ b/cryhard/index.html
@@ -115,6 +115,14 @@
       </div>
     </main>
 
+    <section class="artist-videos">
+      <h2 class="artist-videos__header">Video</h2>
+      <div class="yt-embed" data-youtube-url="https://www.youtube.com/watch?v=63prICtY1f4"></div>
+      <div class="yt-embed" data-youtube-url="https://www.youtube.com/watch?v=3xHGHxrrmbM"></div>
+      <div class="yt-embed" data-youtube-url="https://www.youtube.com/watch?v=uRrYoOmicFE"></div>
+    </section>
+
+
     <!-- Merchandise Section -->
     <section class="related-merch-section">
       <div class="related-merch-content">
@@ -255,5 +263,6 @@
     <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
     <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
     <script src="../../assets/scripts/McrPlayer.js"></script>
+    <script src="../../assets/scripts/YoutubeEmbed.js"></script>
     </body>
 </html>
