finished website, just missing two bios

--- a/acid-baptism/index.html
+++ b/acid-baptism/index.html
@@ -109,6 +109,11 @@
       </div>
     </main>
 
+    <section class="artist-videos">
+        <h2 class="artist-videos__header">Video</h2>
+        <div class="yt-embed" data-youtube-url=""></div>
+    </section>
+
     <!-- Footer Section -->
     <footer class="footer">
       <div class="footer-top">
@@ -157,5 +162,6 @@
     <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
     <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
     <script src="../../assets/scripts/McrPlayer.js"></script>
+    <script src="../../assets/scripts/YoutubeEmbed.js"></script>
     </body>
 </html>
