--- a/donovan-funk/index.html
+++ b/donovan-funk/index.html
@@ -115,6 +115,11 @@
       </div>
     </main>
 
+    <section class="artist-videos">
+        <h2 class="artist-videos__header">Video</h2>
+        <div class="yt-embed" data-youtube-url=""></div>
+    </section>
+
     <!-- Merchandise Section -->
     <section class="related-merch-section">
       <div class="related-merch-content">
@@ -219,5 +224,6 @@
     <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
     <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
     <script src="../../assets/scripts/McrPlayer.js"></script>
+    <script src="../../assets/scripts/YoutubeEmbed.js"></script>
     </body>
 </html>
