--- a/feverest/index.html
+++ b/feverest/index.html
@@ -115,6 +115,10 @@
       </div>
     </main>
 
+    <section class="artist-videos">
+        <h2 class="artist-videos__header">Video</h2>
+        <div class="yt-embed" data-youtube-url="https://www.youtube.com/watch?v=NcLdwnUYRa0"></div>
+    </section>
 
     <!-- Footer Section -->
     <footer class="footer">
@@ -164,5 +168,6 @@
     <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
     <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
     <script src="../../assets/scripts/McrPlayer.js"></script>
+    <script src="../../assets/scripts/YoutubeEmbed.js"></script>
     </body>
 </html>
