--- a/powdr/index.html
+++ b/powdr/index.html
@@ -115,6 +115,13 @@
       </div>
     </main>
 
+    <section class="artist-videos">
+        <h2 class="artist-videos__header">Video</h2>
+        <div class="yt-embed" data-youtube-url="https://www.youtube.com/watch?v=fYWIZgW5-5w"></div>
+        <div class="yt-embed" data-youtube-url="https://www.youtube.com/watch?v=sIb2rQLNYmw"></div>
+        <div class="yt-embed" data-youtube-url="https://www.youtube.com/watch?v=hxwpWvZL3Ck"></div>
+    </section>
+
     <!-- Merchandise Section -->
     <section class="related-merch-section">
       <div class="related-merch-content">
@@ -201,5 +208,6 @@
     <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
     <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
     <script src="../../assets/scripts/McrPlayer.js"></script>
+    <script src="../../assets/scripts/YoutubeEmbed.js"></script>
     </body>
 </html>
