--- a/sliderhand/index.html
+++ b/sliderhand/index.html
@@ -51,9 +51,6 @@
         <h1 class="artist-name">Sliderhand</h1>
         <p class="artist-location">Oklahoma City, OK</p>
       </div>
-
-
-
       <div class="artist-media">
         <!-- If landscape artist photo, use this -->
         <img src="../../assets/images/artists/sliderhand/sliderhand-portrait.webp" alt="" class="artist-image is-landscape">
@@ -62,9 +59,6 @@
         <!-- <img src="../../assets/images/artists/idiot-mile/idiot-mile-live.webp" alt="" class="artist-image is-square"> -->
 
         <div class="artist-bar">
-
-
-
           <div class="artist-social-icons">
             <!-- <a href=""><img src="../../assets/images/social-icons/apple-music-icon.webp" alt="Apple Music Icon"></a> -->
             <!-- <a href=""><img src="../../assets/images/social-icons/spotify-icon.webp" alt="Spotify Icon"></a> -->
@@ -75,14 +69,12 @@
           </div>
         </div>
       </div>
-
-      <div class="description-section">
-        <p>
-
-        </p>
-      </div>
     </main>
 
+    <section class="artist-videos">
+        <h2 class="artist-videos__header">Video</h2>
+        <div class="yt-embed" data-youtube-url=""></div>
+    </section>
 
     <!-- Footer Section -->
     <footer class="footer">
@@ -132,5 +124,6 @@
     <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
     <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
     <script src="../../assets/scripts/McrPlayer.js"></script>
+    <script src="../../assets/scripts/YoutubeEmbed.js"></script>
     </body>
 </html>
