--- a/sweetest-pot/index.html
+++ b/sweetest-pot/index.html
@@ -113,10 +113,16 @@
           While live shows and releases slowed in 2023, the project never stopped moving forward. <em>Sweetest Pot</em> returned in the final quarter of 2025 with a run of fifteen new song releases, including an EP.
           <br><br>
           Originally rooted in hip-hop and chaotic song structures, <em>Sweetest Pot</em> has since shifted into what they describe as “Theoretical Jazz”—a fusion of experimental synthwave, varied drum styles, glitching vocals, and dynamic sampling.
-
         </p>
       </div>
     </main>
+
+    <section class="artist-videos">
+        <h2 class="artist-videos__header">Video</h2>
+        <div class="yt-embed" data-youtube-url="https://www.youtube.com/watch?v=xvNQ1ibLHvs"></div>
+        <div class="yt-embed" data-youtube-url="https://www.youtube.com/watch?v=z6nKhWkEbf8"></div>
+        <div class="yt-embed" data-youtube-url="https://www.youtube.com/watch?v=_Ib3NB9_5c8"></div>
+    </section>
 
     <!-- Merchandise Section -->
     <section class="related-merch-section">
@@ -222,5 +228,6 @@
     <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
     <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
     <script src="../../assets/scripts/McrPlayer.js"></script>
+    <script src="../../assets/scripts/YoutubeEmbed.js"></script>
     </body>
 </html>
