--- a/idiot-mile/index.html
+++ b/idiot-mile/index.html
@@ -116,6 +116,11 @@
       </div>
     </main>
 
+    <section class="artist-videos">
+        <h2 class="artist-videos__header">Video</h2>
+        <div class="yt-embed" data-youtube-url="https://www.youtube.com/watch?v=XnW81zLjVrg"></div>
+    </section>
+
     <!-- Footer Section -->
     <footer class="footer">
       <div class="footer-top">
@@ -164,5 +169,6 @@
     <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
     <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
     <script src="../../assets/scripts/McrPlayer.js"></script>
+    <script src="../../assets/scripts/YoutubeEmbed.js"></script>
     </body>
 </html>
