--- a/toad-socks/index.html
+++ b/toad-socks/index.html
@@ -113,6 +113,11 @@
       </div>
     </main>
 
+    <section class="artist-videos">
+        <h2 class="artist-videos__header">Video</h2>
+        <div class="yt-embed" data-youtube-url="https://www.youtube.com/watch?v=5fdKehtjLLQ"></div>
+    </section>
+
     <!-- Merchandise Section -->
     <section class="related-merch-section">
       <div class="related-merch-content">
@@ -217,5 +222,6 @@
     <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
     <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
     <script src="../../assets/scripts/McrPlayer.js"></script>
+    <script src="../../assets/scripts/YoutubeEmbed.js"></script>
     </body>
 </html>
